flex/cpsl.output
Terminals unused in grammar

   DOWNTO_SYMBOL


State 0 conflicts: 2 shift/reduce
State 89 conflicts: 24 reduce/reduce
State 141 conflicts: 24 reduce/reduce
State 143 conflicts: 24 reduce/reduce
State 145 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ConstantDecl TypeDecl VarDecl subProgram Block DOT_SYMBOL
    2        | ConstantDecl VarDecl subProgram Block DOT_SYMBOL
    3        | ConstantDecl TypeDecl subProgram Block DOT_SYMBOL
    4        | ConstantDecl subProgram Block DOT_SYMBOL
    5        | TypeDecl VarDecl subProgram Block DOT_SYMBOL
    6        | TypeDecl Block subProgram DOT_SYMBOL
    7        | VarDecl Block subProgram DOT_SYMBOL

    8 subProgram: ProcedureDecl subProgram
    9           | FunctionDecl subProgram
   10           | /* empty */

   11 ConstantDecl: CONST_SYMBOL ID_SYMBOL EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantDecl
   12             | /* empty */

   13 ProcedureDecl: PROCEDURE_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   14              | PROCEDURE_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL Body

   15 FunctionDecl: FUNCTION_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   16             | FUNCTION_SYMBOL ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL Body SEMI_COLON_SYMBOL

   17 FormalParameters: /* empty */
   18                 | VAR_SYMBOL IdentList COLON_SYMBOL Type subFormalParameters
   19                 | IdentList COLON_SYMBOL Type subFormalParameters

   20 subFormalParameters: SEMI_COLON_SYMBOL VAR_SYMBOL IdentList COLON_SYMBOL Type subFormalParameters
   21                    | SEMI_COLON_SYMBOL IdentList COLON_SYMBOL Type subFormalParameters
   22                    | /* empty */

   23 Body: ConstantDecl TypeDecl VarDecl Block

   24 Block: BEGIN_SYMBOL StatementSequence END_SYMBOL

   25 TypeDecl: TYPE_SYMBOL ID_SYMBOL EQUAL_SYMBOL SEMI_COLON_SYMBOL subTypeDecl

   26 subTypeDecl: ID_SYMBOL EQUAL_SYMBOL Type SEMI_COLON_SYMBOL subTypeDecl
   27            | /* empty */

   28 Type: SimpleType
   29     | RecordType
   30     | ArrayType

   31 SimpleType: ID_SYMBOL

   32 RecordType: RECORD_SYMBOL subRecordType END_SYMBOL

   33 subRecordType: IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL subRecordType
   34              | /* empty */

   35 ArrayType: ARRAY_SYMBOL RIGHT_SQUARE_SYMBOL ConstExpression COLON_SYMBOL ConstExpression RIGHT_SQUARE_SYMBOL OF_SYMBOL Type

   36 IdentList: ID_SYMBOL subIdentList

   37 subIdentList: COMMA_SYMBOL ID_SYMBOL subIdentList
   38             | /* empty */

   39 VarDecl: VAR_SYMBOL IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL subVarDecl

   40 subVarDecl: IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL subVarDecl
   41           | /* empty */

   42 StatementSequence: Statement subStatementSequence

   43 subStatementSequence: SEMI_COLON_SYMBOL Statement subStatementSequence
   44                     | /* empty */

   45 Statement: Assignment
   46          | IfStatement
   47          | WhileStatement
   48          | RepeatStatment
   49          | ForStatement
   50          | StopStatement
   51          | ReturnStatment
   52          | ReadStatement
   53          | WriteStatement
   54          | ProcedureCall
   55          | NullStatement

   56 Assignment: LValue ASSIGN_SYMBOL ConstExpression

   57 IfStatement: IF_SYMBOL Expression THEN_SYMBOL StatementSequence subIfStatment subElse END_SYMBOL

   58 subIfStatment: ELSEIF_SYMBOL Expression THEN_SYMBOL StatementSequence subIfStatment
   59              | /* empty */

   60 subElse: ELSE_SYMBOL StatementSequence
   61        | /* empty */

   62 WhileStatement: WHILE_SYMBOL Expression DO_SYMBOL StatementSequence END_SYMBOL

   63 RepeatStatment: REPEAT_SYMBOL StatementSequence UNTIL_SYMBOL Expression

   64 ForStatement: FOR_SYMBOL ID_SYMBOL ASSIGN_SYMBOL Expression TO_SYMBOL Expression DO_SYMBOL StatementSequence END_SYMBOL

   65 StopStatement: STOP_SYMBOL

   66 ReturnStatment: RETURN_SYMBOL Expression
   67               | RETURN_SYMBOL

   68 ReadStatement: READ_SYMBOL LEFT_BRACE_SYMBOL LValue subReadStatement RIGHT_BRACE_SYMBOL

   69 subReadStatement: COMMA_SYMBOL LValue subReadStatement
   70                 | /* empty */

   71 WriteStatement: WRITE_SYMBOL LEFT_BRACE_SYMBOL Expression subWriteStatement RIGHT_BRACE_SYMBOL

   72 subWriteStatement: COMMA_SYMBOL Expression subWriteStatement
   73                  | /* empty */

   74 ProcedureCall: ID_SYMBOL LEFT_BRACE_SYMBOL RIGHT_BRACE_SYMBOL
   75              | ID_SYMBOL LEFT_BRACE_SYMBOL Expression subProcedureCall RIGHT_BRACE_SYMBOL

   76 subProcedureCall: COMMA_SYMBOL Expression subProcedureCall
   77                 | /* empty */

   78 NullStatement: /* empty */

   79 Expression: Expression OR_SYMBOL Expression
   80           | Expression AND_SYMBOL Expression
   81           | Expression EQUAL_SYMBOL Expression
   82           | Expression NOT_EQUAL_SYMBOL Expression
   83           | Expression LESS_EQUAL_SYMBOL Expression
   84           | Expression GREAT_EQUAL_SYMBOL Expression
   85           | Expression LESS_SYMBOL Expression
   86           | Expression GREAT_SYMBOL Expression
   87           | Expression ADD_SYMBOL Expression
   88           | Expression SUB_SYMBOL Expression
   89           | Expression MULT_SYMBOL Expression
   90           | Expression DIV_SYMBOL Expression
   91           | Expression PERCENT_SYMBOL Expression
   92           | NOT_SYMBOL Expression
   93           | SUB_SYMBOL Expression
   94           | LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
   95           | ID_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
   96           | ID_SYMBOL LEFT_BRACE_SYMBOL Expression subExpressionIdent RIGHT_BRACE_SYMBOL
   97           | CHR_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
   98           | ORD_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
   99           | PRED_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  100           | SUCC_SYMBOL LEFT_BRACE_SYMBOL Expression RIGHT_BRACE_SYMBOL
  101           | LValue
  102           | ConstExpression

  103 subExpressionIdent: COMMA_SYMBOL Expression subExpressionIdent
  104                   | /* empty */

  105 LValue: ID_SYMBOL
  106       | ID_SYMBOL DOT_SYMBOL ID_SYMBOL
  107       | ID_SYMBOL LEFT_SQUARE_SYMBOL Expression RIGHT_SQUARE_SYMBOL

  108 ConstExpression: NOT_SYMBOL ConstExpression
  109                | SUB_SYMBOL ConstExpression
  110                | LEFT_BRACE_SYMBOL ConstExpression RIGHT_BRACE_SYMBOL
  111                | INTEGER_SYMBOL
  112                | CHARACTER_SYMBOL
  113                | STRING_SYMBOL
  114                | ID_SYMBOL


Terminals, with rules where they appear

$end (0) 0
error (256)
ID_SYMBOL (258) 11 13 14 15 16 25 26 31 36 37 64 74 75 95 96 105 106
    107 114
CHARACTER_SYMBOL (259) 112
INTEGER_SYMBOL (260) 111
STRING_SYMBOL (261) 113
ARRAY_SYMBOL (262) 35
BEGIN_SYMBOL (263) 24
ELSE_SYMBOL (264) 60
ELSEIF_SYMBOL (265) 58
IF_SYMBOL (266) 57
OF_SYMBOL (267) 35
RECORD_SYMBOL (268) 32
REPEAT_SYMBOL (269) 63
TO_SYMBOL (270) 64
TYPE_SYMBOL (271) 25
CHR_SYMBOL (272) 97
CONST_SYMBOL (273) 11
DO_SYMBOL (274) 62 64
END_SYMBOL (275) 24 32 57 62 64
FOR_SYMBOL (276) 64
FORWARD_SYMBOL (277) 13 15
ORD_SYMBOL (278) 98
PRED_SYMBOL (279) 99
PROCEDURE_SYMBOL (280) 13 14
RETURN_SYMBOL (281) 66 67
STOP_SYMBOL (282) 65
SUCC_SYMBOL (283) 100
UNTIL_SYMBOL (284) 63
VAR_SYMBOL (285) 18 20 39
WHILE_SYMBOL (286) 62
DOWNTO_SYMBOL (287)
FUNCTION_SYMBOL (288) 15 16
READ_SYMBOL (289) 68
THEN_SYMBOL (290) 57 58
WRITE_SYMBOL (291) 71
ASSIGN_SYMBOL (292) 56 64
ADD_SYMBOL (293) 87
SUB_SYMBOL (294) 88 93 109
MULT_SYMBOL (295) 89
DIV_SYMBOL (296) 90
AND_SYMBOL (297) 80
OR_SYMBOL (298) 79
NOT_SYMBOL (299) 92 108
EQUAL_SYMBOL (300) 11 25 26 81
NOT_EQUAL_SYMBOL (301) 82
LESS_SYMBOL (302) 85
LESS_EQUAL_SYMBOL (303) 83
GREAT_SYMBOL (304) 86
GREAT_EQUAL_SYMBOL (305) 84
DOT_SYMBOL (306) 1 2 3 4 5 6 7 106
COMMA_SYMBOL (307) 37 69 72 76 103
COLON_SYMBOL (308) 15 16 18 19 20 21 33 35 39 40
SEMI_COLON_SYMBOL (309) 11 13 14 15 16 20 21 25 26 33 39 40 43
LEFT_BRACE_SYMBOL (310) 13 14 15 16 68 71 74 75 94 95 96 97 98 99 100
    110
RIGHT_BRACE_SYMBOL (311) 13 14 15 16 68 71 74 75 94 95 96 97 98 99
    100 110
LEFT_SQUARE_SYMBOL (312) 107
RIGHT_SQUARE_SYMBOL (313) 35 107
PERCENT_SYMBOL (314) 91
UMINUS (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1 2 3 4 5 6 7, on right: 0
subProgram (63)
    on left: 8 9 10, on right: 1 2 3 4 5 6 7 8 9
ConstantDecl (64)
    on left: 11 12, on right: 1 2 3 4 11 23
ProcedureDecl (65)
    on left: 13 14, on right: 8
FunctionDecl (66)
    on left: 15 16, on right: 9
FormalParameters (67)
    on left: 17 18 19, on right: 13 14 15 16
subFormalParameters (68)
    on left: 20 21 22, on right: 18 19 20 21
Body (69)
    on left: 23, on right: 14 16
Block (70)
    on left: 24, on right: 1 2 3 4 5 6 7 23
TypeDecl (71)
    on left: 25, on right: 1 3 5 6 23
subTypeDecl (72)
    on left: 26 27, on right: 25 26
Type (73)
    on left: 28 29 30, on right: 15 16 18 19 20 21 26 33 35 39 40
SimpleType (74)
    on left: 31, on right: 28
RecordType (75)
    on left: 32, on right: 29
subRecordType (76)
    on left: 33 34, on right: 32 33
ArrayType (77)
    on left: 35, on right: 30
IdentList (78)
    on left: 36, on right: 18 19 20 21 33 39 40
subIdentList (79)
    on left: 37 38, on right: 36 37
VarDecl (80)
    on left: 39, on right: 1 2 5 7 23
subVarDecl (81)
    on left: 40 41, on right: 39 40
StatementSequence (82)
    on left: 42, on right: 24 57 58 60 62 63 64
subStatementSequence (83)
    on left: 43 44, on right: 42 43
Statement (84)
    on left: 45 46 47 48 49 50 51 52 53 54 55, on right: 42 43
Assignment (85)
    on left: 56, on right: 45
IfStatement (86)
    on left: 57, on right: 46
subIfStatment (87)
    on left: 58 59, on right: 57 58
subElse (88)
    on left: 60 61, on right: 57
WhileStatement (89)
    on left: 62, on right: 47
RepeatStatment (90)
    on left: 63, on right: 48
ForStatement (91)
    on left: 64, on right: 49
StopStatement (92)
    on left: 65, on right: 50
ReturnStatment (93)
    on left: 66 67, on right: 51
ReadStatement (94)
    on left: 68, on right: 52
subReadStatement (95)
    on left: 69 70, on right: 68 69
WriteStatement (96)
    on left: 71, on right: 53
subWriteStatement (97)
    on left: 72 73, on right: 71 72
ProcedureCall (98)
    on left: 74 75, on right: 54
subProcedureCall (99)
    on left: 76 77, on right: 75 76
NullStatement (100)
    on left: 78, on right: 55
Expression (101)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102, on right: 57 58 62 63 64 66 71 72 75 76 79
    80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
    103 107
subExpressionIdent (102)
    on left: 103 104, on right: 96 103
LValue (103)
    on left: 105 106 107, on right: 56 68 69 101
ConstExpression (104)
    on left: 108 109 110 111 112 113 114, on right: 11 35 56 102 108
    109 110


state 0

    0 $accept: . Program $end

    TYPE_SYMBOL   shift, and go to state 1
    CONST_SYMBOL  shift, and go to state 2
    VAR_SYMBOL    shift, and go to state 3

    TYPE_SYMBOL  [reduce using rule 12 (ConstantDecl)]
    VAR_SYMBOL   [reduce using rule 12 (ConstantDecl)]
    $default     reduce using rule 12 (ConstantDecl)

    Program       go to state 4
    ConstantDecl  go to state 5
    TypeDecl      go to state 6
    VarDecl       go to state 7


state 1

   25 TypeDecl: TYPE_SYMBOL . ID_SYMBOL EQUAL_SYMBOL SEMI_COLON_SYMBOL subTypeDecl

    ID_SYMBOL  shift, and go to state 8


state 2

   11 ConstantDecl: CONST_SYMBOL . ID_SYMBOL EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantDecl

    ID_SYMBOL  shift, and go to state 9


state 3

   39 VarDecl: VAR_SYMBOL . IdentList COLON_SYMBOL Type SEMI_COLON_SYMBOL subVarDecl

    ID_SYMBOL  shift, and go to state 10

    IdentList  go to state 11


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 5

    1 Program: ConstantDecl . TypeDecl VarDecl subProgram Block DOT_SYMBOL
    2        | ConstantDecl . VarDecl subProgram Block DOT_SYMBOL
    3        | ConstantDecl . TypeDecl subProgram Block DOT_SYMBOL
    4        | ConstantDecl . subProgram Block DOT_SYMBOL

    TYPE_SYMBOL       shift, and go to state 1
    PROCEDURE_SYMBOL  shift, and go to state 13
    VAR_SYMBOL        shift, and go to state 3
    FUNCTION_SYMBOL   shift, and go to state 14

    $default  reduce using rule 10 (subProgram)

    subProgram     go to state 15
    ProcedureDecl  go to state 16
    FunctionDecl   go to state 17
    TypeDecl       go to state 18
    VarDecl        go to state 19


state 6

    5 Program: TypeDecl . VarDecl subProgram Block DOT_SYMBOL
    6        | TypeDecl . Block subProgram DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 20
    VAR_SYMBOL    shift, and go to state 3

    Block    go to state 21
    VarDecl  go to state 22


state 7

    7 Program: VarDecl . Block subProgram DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 20

    Block  go to state 23


state 8

   25 TypeDecl: TYPE_SYMBOL ID_SYMBOL . EQUAL_SYMBOL SEMI_COLON_SYMBOL subTypeDecl

    EQUAL_SYMBOL  shift, and go to state 24


state 9

   11 ConstantDecl: CONST_SYMBOL ID_SYMBOL . EQUAL_SYMBOL ConstExpression SEMI_COLON_SYMBOL ConstantDecl

    EQUAL_SYMBOL  shift, and go to state 25


state 10

   36 IdentList: ID_SYMBOL . subIdentList

    COMMA_SYMBOL  shift, and go to state 26

    $default  reduce using rule 38 (subIdentList)

    subIdentList  go to state 27


state 11

   39 VarDecl: VAR_SYMBOL IdentList . COLON_SYMBOL Type SEMI_COLON_SYMBOL subVarDecl

    COLON_SYMBOL  shift, and go to state 28


state 12

    0 $accept: Program $end .

    $default  accept


state 13

   13 ProcedureDecl: PROCEDURE_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   14              | PROCEDURE_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL SEMI_COLON_SYMBOL Body

    ID_SYMBOL  shift, and go to state 29


state 14

   15 FunctionDecl: FUNCTION_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL FORWARD_SYMBOL SEMI_COLON_SYMBOL
   16             | FUNCTION_SYMBOL . ID_SYMBOL LEFT_BRACE_SYMBOL FormalParameters RIGHT_BRACE_SYMBOL COLON_SYMBOL Type SEMI_COLON_SYMBOL Body SEMI_COLON_SYMBOL

    ID_SYMBOL  shift, and go to state 30


state 15

    4 Program: ConstantDecl subProgram . Block DOT_SYMBOL

    BEGIN_SYMBOL  shift, and go to state 20

    Block  go to state 31


state 16

    8 subProgram: ProcedureDecl . subProgram

    PROCEDURE_SYMBOL  shift, and go to state 13
    FUNCTION_SYMBOL   shift, and go to state 14

    $default  reduce using rule 10 (subProgram)

    subProgram     go to state 32
    ProcedureDecl  go to state 16
    FunctionDecl   go to state 17


state 17

    9 subProgram: FunctionDecl . subProgram

    PROCEDURE_SYMBOL  shift, and go to state 13
    FUNCTION_SYMBOL   shift, and go to state 14

    $default  reduce using rule 10 (subProgram)

    subProgram     go to state 33
    ProcedureDecl  go to state 16
    FunctionDecl   go to state 17


state 18

    1 Program: ConstantDecl TypeDecl . VarDecl subProgram Block DOT_SYMBOL
    3        | ConstantDecl TypeDecl . subProgram Block DOT_SYMBOL

    PROCEDURE_SYMBOL  shift, and go to state 13
    VAR_SYMBOL        shift, and go to state 3
    FUNCTION_SYMBOL   shift, and go to state 14

    $default  reduce using rule 10 (subProgram)

    subProgram     go to state 34
    ProcedureDecl  go to state 16
    FunctionDecl   go to state 17
    VarDecl        go to state 35


state 19

    2 Program: ConstantDecl VarDecl . subProgram Block DOT_SYMBOL

    PROCEDURE_SYMBOL  shift, and go to state 13
    FUNCTION_SYMBOL   shift, and go to state 14

    $default  reduce using rule 10 (subProgram)

    subProgram     go to state 36
    ProcedureDecl  go to state 16
    FunctionDecl   go to state 17


state 20

   24 Block: BEGIN_SYMBOL . StatementSequence END_SYMBOL

    ID_SYMBOL      shift, and go to state 37
    IF_SYMBOL      shift, and go to state 38
    REPEAT_SYMBOL  shift, and go to state 39
    FOR_SYMBOL     shift, and go to state 40
    RETURN_SYMBOL  shift, and go to state 41
    STOP_SYMBOL    shift, and go to state 42
    WHILE_SYMBOL   shift, and go to state 43
    READ_SYMBOL    shift, and go to state 44
    WRITE_SYMBOL   shift, and go to state 45

    $default  reduce using rule 78 (NullStatement)

    StatementSequence  go to state 46
    Statement          go to state 47
    Assignment         go to state 48
    IfStatement        go to state 49
    WhileStatement     go to state 50
    RepeatStatment     go to state 51
    ForStatement       go to state 52
    StopStatement      go to state 53
    ReturnStatment     go to state 54
    ReadStatement      go to state 55
    WriteStatement     go to state 56
    ProcedureCall      go to state 57
    NullStatement      go to state 58
    LValue             go to state 59


state 21

    6 Program: TypeDecl Block . subProgram DOT_SYMBOL

    PROCEDURE_SYMBOL  shift, and go to state 13
    FUNCTION_SYMBOL   shift, and go to state 14

    $default  reduce using rule 10 (subProgram)
